@@ -18,6 +18,8 @@
  */
 
 import org.apache.tools.ant.taskdefs.condition.Os
+import org.elasticsearch.gradle.test.RestIntegTestTask
+
 import java.nio.file.Files
 import java.nio.file.Path
 import java.nio.file.Paths
@@ -26,6 +28,8 @@ esplugin {
   description 'The HDFS repository plugin adds support for Hadoop Distributed File-System (HDFS) repositories.'
   classname 'org.elasticsearch.repositories.hdfs.HdfsPlugin'
 }
+
+apply plugin: 'elasticsearch.vagrantsupport'
 
 versions << [
   'hadoop2': '2.7.1'
@@ -42,9 +46,10 @@ dependencies {
   compile "org.apache.hadoop:hadoop-auth:${versions.hadoop2}"
   compile "org.apache.hadoop:hadoop-hdfs:${versions.hadoop2}"
   compile 'org.apache.htrace:htrace-core:3.1.0-incubating'
-  compile 'com.google.guava:guava:16.0.1'
+  compile 'com.google.guava:guava:11.0.2'
   compile 'com.google.protobuf:protobuf-java:2.5.0'
   compile 'commons-logging:commons-logging:1.1.3'
+  compile 'commons-cli:commons-cli:1.2'
   compile 'commons-collections:commons-collections:3.2.2'
   compile 'commons-configuration:commons-configuration:1.6'
   compile 'commons-io:commons-io:2.4'
@@ -59,7 +64,7 @@ dependencyLicenses {
   mapping from: /hadoop-.*/, to: 'hadoop'
 }
 
-task hdfsFixture(type: org.elasticsearch.gradle.test.Fixture) {
+task hdfsFixture(type: org.elasticsearch.gradle.test.AntFixture) {
   dependsOn project.configurations.hdfsFixture
   executable = new File(project.javaHome, 'bin/java')
   env 'CLASSPATH', "${ -> project.configurations.hdfsFixture.asPath }"
@@ -67,33 +72,139 @@ task hdfsFixture(type: org.elasticsearch.gradle.test.Fixture) {
        baseDir
 }
 
-integTest {
-  boolean fixtureSupported = false;
-  if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-    // hdfs fixture will not start without hadoop native libraries on windows
-    String nativePath = System.getenv("HADOOP_HOME")
-    if (nativePath != null) {
-      Path path = Paths.get(nativePath);
-      if (Files.isDirectory(path) &&
-          Files.exists(path.resolve("bin").resolve("winutils.exe")) &&
-          Files.exists(path.resolve("bin").resolve("hadoop.dll")) &&
-          Files.exists(path.resolve("bin").resolve("hdfs.dll"))) {
-        fixtureSupported = true
-      } else {
-        throw new IllegalStateException("HADOOP_HOME: " + path.toString() + " is invalid, does not contain hadoop native libraries in $HADOOP_HOME/bin");
-      }
-    }
-  } else {
-    fixtureSupported = true
+// MIT Kerberos Vagrant Testing Fixture
+String box = "krb5kdc"
+Map<String,String> vagrantEnvVars = [
+        'VAGRANT_CWD'           : "${project(':test:fixtures:krb5kdc-fixture').projectDir}",
+        'VAGRANT_VAGRANTFILE'   : 'Vagrantfile',
+        'VAGRANT_PROJECT_DIR'   : "${project(':test:fixtures:krb5kdc-fixture').projectDir}"
+]
+
+task krb5kdcUpdate(type: org.elasticsearch.gradle.vagrant.VagrantCommandTask) {
+  command 'box'
+  subcommand 'update'
+  boxName box
+  environmentVars vagrantEnvVars
+  dependsOn "vagrantCheckVersion", "virtualboxCheckVersion"
+}
+
+task krb5kdcFixture(type: org.elasticsearch.gradle.test.VagrantFixture) {
+  command 'up'
+  args '--provision', '--provider', 'virtualbox'
+  boxName box
+  environmentVars vagrantEnvVars
+  dependsOn krb5kdcUpdate
+}
+
+task krb5AddPrincipals {
+  dependsOn krb5kdcFixture
+}
+
+List<String> principals = [ "elasticsearch", "hdfs/hdfs.build.elastic.co" ]
+String realm = "BUILD.ELASTIC.CO"
+
+for (String principal : principals) {
+  Task create = project.tasks.create("addPrincipal#${principal}", org.elasticsearch.gradle.vagrant.VagrantCommandTask) {
+    command 'ssh'
+    args '--command', "sudo bash /vagrant/src/main/resources/provision/addprinc.sh $principal"
+    boxName box
+    environmentVars vagrantEnvVars
+    dependsOn krb5kdcFixture
+  }
+  krb5AddPrincipals.dependsOn(create)
+}
+
+task secureHdfsFixture(type: org.elasticsearch.gradle.test.AntFixture) {
+  dependsOn project.configurations.hdfsFixture, krb5kdcFixture, krb5AddPrincipals
+  executable = new File(project.javaHome, 'bin/java')
+  env 'CLASSPATH', "${ -> project.configurations.hdfsFixture.asPath }"
+
+  Path keytabPath = project(':test:fixtures:krb5kdc-fixture').buildDir.toPath().resolve("keytabs").resolve("hdfs_hdfs.build.elastic.co.keytab")
+  Path krb5Config = project(':test:fixtures:krb5kdc-fixture').buildDir.toPath().resolve("conf").resolve("krb5.conf")
+
+  final List<String> miniHDFSArgs = ["-Djava.security.krb5.conf=${krb5Config}"]
+
+  if (project.rootProject.ext.javaVersion == JavaVersion.VERSION_1_9) {
+    miniHDFSArgs.add('--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED')
   }
 
-  if (fixtureSupported) {
-    dependsOn hdfsFixture
-  } else {
-    logger.warn("hdfsFixture unsupported, please set HADOOP_HOME and put HADOOP_HOME\\bin in PATH")
-    // just tests that the plugin loads
-    systemProperty 'tests.rest.suite', 'hdfs_repository/10_basic'
+  miniHDFSArgs.add('hdfs.MiniHDFS')
+  miniHDFSArgs.add(baseDir)
+  miniHDFSArgs.add("hdfs/hdfs.build.elastic.co@${realm}")
+  miniHDFSArgs.add("${keytabPath}")
+
+  args miniHDFSArgs.toArray()
+}
+
+boolean fixtureSupported = false
+if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+  // hdfs fixture will not start without hadoop native libraries on windows
+  String nativePath = System.getenv("HADOOP_HOME")
+  if (nativePath != null) {
+    Path path = Paths.get(nativePath);
+    if (Files.isDirectory(path) &&
+        Files.exists(path.resolve("bin").resolve("winutils.exe")) &&
+        Files.exists(path.resolve("bin").resolve("hadoop.dll")) &&
+        Files.exists(path.resolve("bin").resolve("hdfs.dll"))) {
+      fixtureSupported = true
+    } else {
+      throw new IllegalStateException("HADOOP_HOME: ${path} is invalid, does not contain hadoop native libraries in \$HADOOP_HOME/bin");
+    }
   }
+} else {
+  fixtureSupported = true
+}
+
+if (fixtureSupported) {
+  integTestCluster.dependsOn hdfsFixture
+  integTestRunner.systemProperty 'tests.rest.suite', 'hdfs_repository'
+} else {
+  logger.warn("hdfsFixture unsupported, please set HADOOP_HOME and put HADOOP_HOME\\bin in PATH")
+  // just tests that the plugin loads
+  integTestRunner.systemProperty 'tests.rest.suite', 'hdfs_repository/10_basic'
+}
+
+boolean secureFixtureSupported = false
+if (fixtureSupported) {
+  secureFixtureSupported = project.rootProject.vagrantSupported
+}
+
+// Create a Integration Test suite just for security based tests
+// This must execute before the afterEvaluate block from integTestSecure
+project.afterEvaluate {
+  Path elasticsearchKT = project(':test:fixtures:krb5kdc-fixture').buildDir.toPath().resolve("keytabs").resolve("elasticsearch.keytab").toAbsolutePath()
+  Path krb5conf = project(':test:fixtures:krb5kdc-fixture').buildDir.toPath().resolve("conf").resolve("krb5.conf").toAbsolutePath()
+
+  project.integTestSecureCluster.dependsOn(project.bundlePlugin)
+  project.integTestSecure.clusterConfig.plugin(project.path)
+  project.integTestSecure.clusterConfig.extraConfigFile("repository-hdfs/krb5.keytab", "${elasticsearchKT}")
+
+  final String baseJvmArgs = "-Xms" + System.getProperty('tests.heap.size', '512m') +
+          " " + "-Xmx" + System.getProperty('tests.heap.size', '512m') +
+          " " + "-Djava.security.krb5.conf=${krb5conf}" +
+          " " + System.getProperty('tests.jvm.argline', '')
+  final String jvmArgs
+  if (project.rootProject.ext.javaVersion == JavaVersion.VERSION_1_9) {
+    jvmArgs = baseJvmArgs + " " + '--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED'
+  } else {
+    jvmArgs = baseJvmArgs
+  }
+
+  project.integTestSecure.clusterConfig.jvmArgs = jvmArgs
+}
+
+RestIntegTestTask integTestSecure = project.tasks.create('integTestSecure', RestIntegTestTask.class) {
+  description = "Runs rest tests against an elasticsearch cluster with HDFS secured by MIT Kerberos."
+}
+
+if (secureFixtureSupported) {
+  project.check.dependsOn(integTestSecure)
+
+  // Fixture dependencies
+  integTestSecureCluster.dependsOn secureHdfsFixture, krb5kdcFixture
+  integTestSecureRunner.systemProperty 'tests.rest.suite', 'secure_hdfs_repository'
+} else {
+  integTestSecure.enabled = false
 }
 
 thirdPartyAudit.excludes = [
@@ -116,46 +227,46 @@ thirdPartyAudit.excludes = [
   'com.sun.jersey.spi.container.servlet.ServletContainer', 
   'com.sun.jersey.spi.inject.Injectable', 
   'com.sun.jersey.spi.inject.InjectableProvider',
-  'io.netty.bootstrap.Bootstrap', 
-  'io.netty.bootstrap.ChannelFactory', 
-  'io.netty.bootstrap.ServerBootstrap', 
-  'io.netty.buffer.ByteBuf', 
-  'io.netty.buffer.Unpooled', 
-  'io.netty.channel.Channel', 
-  'io.netty.channel.ChannelFuture', 
-  'io.netty.channel.ChannelFutureListener', 
-  'io.netty.channel.ChannelHandler', 
-  'io.netty.channel.ChannelHandlerContext', 
-  'io.netty.channel.ChannelInboundHandlerAdapter', 
-  'io.netty.channel.ChannelInitializer', 
-  'io.netty.channel.ChannelPipeline', 
-  'io.netty.channel.EventLoopGroup', 
-  'io.netty.channel.SimpleChannelInboundHandler', 
-  'io.netty.channel.group.ChannelGroup', 
-  'io.netty.channel.group.ChannelGroupFuture', 
-  'io.netty.channel.group.DefaultChannelGroup', 
-  'io.netty.channel.nio.NioEventLoopGroup', 
-  'io.netty.channel.socket.SocketChannel', 
-  'io.netty.channel.socket.nio.NioServerSocketChannel', 
-  'io.netty.channel.socket.nio.NioSocketChannel', 
-  'io.netty.handler.codec.http.DefaultFullHttpRequest', 
-  'io.netty.handler.codec.http.DefaultFullHttpResponse', 
-  'io.netty.handler.codec.http.DefaultHttpResponse', 
-  'io.netty.handler.codec.http.HttpContent', 
-  'io.netty.handler.codec.http.HttpHeaders', 
-  'io.netty.handler.codec.http.HttpMethod', 
-  'io.netty.handler.codec.http.HttpRequest', 
-  'io.netty.handler.codec.http.HttpRequestDecoder', 
-  'io.netty.handler.codec.http.HttpRequestEncoder', 
-  'io.netty.handler.codec.http.HttpResponseEncoder', 
-  'io.netty.handler.codec.http.HttpResponseStatus', 
-  'io.netty.handler.codec.http.HttpVersion', 
-  'io.netty.handler.codec.http.QueryStringDecoder', 
-  'io.netty.handler.codec.string.StringEncoder', 
-  'io.netty.handler.ssl.SslHandler', 
-  'io.netty.handler.stream.ChunkedStream', 
-  'io.netty.handler.stream.ChunkedWriteHandler', 
-  'io.netty.util.concurrent.GlobalEventExecutor', 
+  'io.netty.bootstrap.Bootstrap',
+  'io.netty.bootstrap.ChannelFactory',
+  'io.netty.bootstrap.ServerBootstrap',
+  'io.netty.buffer.ByteBuf',
+  'io.netty.buffer.Unpooled',
+  'io.netty.channel.Channel',
+  'io.netty.channel.ChannelFuture',
+  'io.netty.channel.ChannelFutureListener',
+  'io.netty.channel.ChannelHandler',
+  'io.netty.channel.ChannelHandlerContext',
+  'io.netty.channel.ChannelInboundHandlerAdapter',
+  'io.netty.channel.ChannelInitializer',
+  'io.netty.channel.ChannelPipeline',
+  'io.netty.channel.EventLoopGroup',
+  'io.netty.channel.SimpleChannelInboundHandler',
+  'io.netty.channel.group.ChannelGroup',
+  'io.netty.channel.group.ChannelGroupFuture',
+  'io.netty.channel.group.DefaultChannelGroup',
+  'io.netty.channel.nio.NioEventLoopGroup',
+  'io.netty.channel.socket.SocketChannel',
+  'io.netty.channel.socket.nio.NioServerSocketChannel',
+  'io.netty.channel.socket.nio.NioSocketChannel',
+  'io.netty.handler.codec.http.DefaultFullHttpRequest',
+  'io.netty.handler.codec.http.DefaultFullHttpResponse',
+  'io.netty.handler.codec.http.DefaultHttpResponse',
+  'io.netty.handler.codec.http.HttpContent',
+  'io.netty.handler.codec.http.HttpHeaders',
+  'io.netty.handler.codec.http.HttpMethod',
+  'io.netty.handler.codec.http.HttpRequest',
+  'io.netty.handler.codec.http.HttpRequestDecoder',
+  'io.netty.handler.codec.http.HttpRequestEncoder',
+  'io.netty.handler.codec.http.HttpResponseEncoder',
+  'io.netty.handler.codec.http.HttpResponseStatus',
+  'io.netty.handler.codec.http.HttpVersion',
+  'io.netty.handler.codec.http.QueryStringDecoder',
+  'io.netty.handler.codec.string.StringEncoder',
+  'io.netty.handler.ssl.SslHandler',
+  'io.netty.handler.stream.ChunkedStream',
+  'io.netty.handler.stream.ChunkedWriteHandler',
+  'io.netty.util.concurrent.GlobalEventExecutor',
   'javax.ws.rs.core.Context', 
   'javax.ws.rs.core.MediaType', 
   'javax.ws.rs.core.MultivaluedMap', 
@@ -339,9 +450,6 @@ thirdPartyAudit.excludes = [
   'org.apache.hadoop.security.SecurityUtil$QualifiedHostResolver',
 
   // internal java api: sun.misc.Unsafe
-  'com.google.common.cache.Striped64',
-  'com.google.common.cache.Striped64$1',
-  'com.google.common.cache.Striped64$Cell',
   'com.google.common.primitives.UnsignedBytes$LexicographicalComparatorHolder$UnsafeComparator', 
   'com.google.common.primitives.UnsignedBytes$LexicographicalComparatorHolder$UnsafeComparator$1',
   'org.apache.hadoop.io.FastByteComparisons$LexicographicalComparerHolder$UnsafeComparer',
@@ -357,4 +465,19 @@ thirdPartyAudit.excludes = [
  
   // internal java api: sun.misc.SignalHandler
   'org.apache.hadoop.util.SignalLogger$Handler',
+
+  // optional dependencies of slf4j-api
+  'org.slf4j.impl.StaticMDCBinder',
+  'org.slf4j.impl.StaticMarkerBinder',
+
+  'org.apache.log4j.AppenderSkeleton',
+  'org.apache.log4j.AsyncAppender',
+  'org.apache.log4j.helpers.ISO8601DateFormat',
+  'org.apache.log4j.spi.ThrowableInformation'
 ]
+
+// Gradle 2.13 bundles org.slf4j.impl.StaticLoggerBinder in its core.jar which leaks into the forbidden APIs ant task
+// Gradle 2.14+ does not bundle this class anymore so we need to properly exclude it here.
+if (GradleVersion.current() > GradleVersion.version("2.13")) {
+  thirdPartyAudit.excludes += ['org.slf4j.impl.StaticLoggerBinder']
+}
